--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
 	"description": "Whatsapp bot for Berrys Company",
 	"main": "index.js",
 	"scripts": {
+		"build": "rm -rf ./dist .wwebjs_auth .wwebjs_cache && npx tsc",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "rm -rf ./dist .wwebjs_auth .wwebjs_cache && npx tsc &&  node ./dist",
+		"start": "node ./dist",
 		"dev": "rm -rf .wwebjs_auth .wwebjs_cache && nodemon --exec ts-node ./src"
 	},
 	"author": "",
