--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"build": "rm -rf ./dist .wwebjs_auth .wwebjs_cache && npx tsc",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node ./dist",
+		"start": "nodemon --exec ts-node ./src",
 		"dev": "rm -rf .wwebjs_auth .wwebjs_cache && nodemon --exec ts-node ./src"
 	},
 	"author": "",
