--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"target": "ES6", // Specify ECMAScript target version
 		"module": "commonjs", // Specify module code generation
-		"outDir": "./dist", // Output directory for compiled JS files
+		"outDir": "./public", // Output directory for compiled JS files
 		"rootDir": "./src", // Source directory for TS files
 		"strict": true, // Enable all strict type-checking options
 		"esModuleInterop": true, // Enable compatibility with ES modules
