--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Whatsapp bot for Berrys Company",
 	"main": "index.js",
 	"scripts": {
-		"build": "rm -rf ./public .wwebjs_auth .wwebjs_cache && npx tsc",
+		"build": "rm -rf ./public .wwebjs_auth .wwebjs_cache && npx tsc && webpack --config webpack.config.js",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "node ./public",
 		"dev": "rm -rf .wwebjs_auth .wwebjs_cache && nodemon --exec ts-node ./src"
