--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
 	"scripts": {
 		"build": "rm -rf ./public .wwebjs_auth .wwebjs_cache && npx tsc && webpack --config webpack.config.js",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node ./public",
-		"dev": "rm -rf .wwebjs_auth .wwebjs_cache && nodemon --exec ts-node ./src"
+		"start": "node ./public/bundle.js",
+		"dev": "rm -rf .wwebjs_auth .wwebjs_cache && nodemon --exec ts-node ./src/index.ts"
 	},
 	"author": "",
 	"license": "ISC",
