--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -1,32 +1,47 @@
 name: NodeJS with Webpack
 
 on:
-        push:
-                branches: ['main']
-        pull_request:
-                branches: ['main']
+  push:
+    branches: ['main']
+  pull_request:
+    branches: ['main']
 
 jobs:
-        build:
-                runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-latest
 
-                strategy:
-                        matrix:
-                                node-version: [18.x, 20.x, 22.x]
+    strategy:
+      matrix:
+        node-version: [18.x, 20.x, 22.x]
 
-                steps:
-                        - uses: actions/checkout@v4
+    steps:
+      - uses: actions/checkout@v4
 
-                        - name: Use Node.js ${{ matrix.node-version }}
-                          uses: actions/setup-node@v4
-                          with:
-                                  node-version: ${{ matrix.node-version }}
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
 
-                        - name: Build
-                          run: |
-                                  rm -rf ./public .wwebjs_auth .wwebjs_cache
-                                  npx tsc
-                                  webpack --config webpack.config.js
-                                  npm install --save-dev webpack-cli ts-loader typescript webpack && 
-                                  npm install
-                                  npx webpack
+      - name: Install Dependencies
+        run: |
+          npm install --save-dev webpack-cli ts-loader typescript webpack
+          npm install
+
+      - name: Clean Directories
+        run: |
+          rm -rf ./public .wwebjs_auth .wwebjs_cache
+
+      - name: Compile TypeScript
+        run: npx tsc
+        # Verify that the dist/ directory is created
+        if: ${{ !failure() }}
+
+      - name: Run Webpack
+        run: webpack --config webpack.config.js
+
+      - name: Fix Deprecation Warnings and Vulnerabilities
+        run: |
+          npm install rimraf@latest --save-dev
+          npm install glob@latest --save-dev
+          npm install puppeteer@latest --save-dev
+          npm audit fix --force
