--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 	"dependencies": {
 		"dotenv": "^16.4.7",
 		"qrcode-terminal": "^0.12.0",
-		"whatsapp-web.js": "^1.26.0"
+		"whatsapp-web.js": "^1.26.0",
+		"puppeteer": "^19.0.0"
 	},
 	"devDependencies": {
 		"@types/node": "^22.13.10",
