--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -35,10 +35,13 @@ jobs:
 
                         - name: Clean Directories
                           run: |
-                                  rm -rf ./public .wwebjs_auth .wwebjs_cache
+                                  rm -rf ./public ./dist .wwebjs_auth .wwebjs_cache
 
                         - name: Compile TypeScript
                           run: npx tsc
 
                         - name: Run Webpack
                           run: webpack --config webpack.config.js
+                        
+                        - name: Fix Vulnerabilities
+                          run: npm audit fix --force
