--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -27,6 +27,7 @@ jobs:
 
                         - name: Install Node.js Dependencies
                           run: |
+                                  npm install 
                                   npm install --save-dev webpack-cli ts-loader typescript webpack utf-8-validate bufferutil rimraf@latest glob@latest puppeteer@latest
                                   npm install whatsapp-web.js@latest
 
