--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"dotenv": "^16.4.7",
 		"qrcode-terminal": "^0.12.0",
 		"whatsapp-web.js": "^1.26.0",
-		"puppeteer": "^19.0.0"
+		"puppeteer": "^19.0.0",
+		"ws": "^8.17.1"
 	},
 	"devDependencies": {
 		"@types/node": "^22.13.10",
