--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
 		"@types/node": "^22.13.10",
 		"nodemon": "^3.1.9",
 		"ts-node": "^10.9.2",
-		"typescript": "^5.8.2"
+		"typescript": "^5.8.2",
+		"ts-loader": "^6.2.2",
+		"webpack": "^4.42.1",
+		"webpack-dev-server": "^3.10.3",
+		"webpack-cli": "^3.3.11"
 	}
 }
