--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
 	"dependencies": {
 		"dotenv": "^16.4.7",
 		"qrcode-terminal": "^0.12.0",
-		"whatsapp-web.js": "^1.26.1-alpha.0",
-		"puppeteer": "^19.0.0",
-		"ws": "^8.17.1"
+		"whatsapp-web.js": "^1.26.0",
+		"puppeteer": "^24.4.0",
+		"ws": "^8.18.1"
 	},
 	"devDependencies": {
 		"@types/node": "^22.13.10",
