--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	"dependencies": {
 		"dotenv": "^16.4.7",
 		"qrcode-terminal": "^0.12.0",
-		"whatsapp-web.js": "^1.26.0",
+		"whatsapp-web.js": "^1.26.1-alpha.0",
 		"puppeteer": "^24.4.0",
 		"ws": "^8.18.1"
 	},
