--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
 		"qrcode-terminal": "^0.12.0",
 		"whatsapp-web.js": "^1.26.1-alpha.0",
 		"puppeteer": "^24.4.0",
-		"ws": "^8.18.1"
+		"ws": "^8.18.1",
+		"express": "^4.18.2",
+		"qrcode": "^1.5.3"
 	},
 	"devDependencies": {
 		"@types/node": "^22.13.10",
