--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
 	"description": "Whatsapp bot for Berrys Company",
 	"main": "index.js",
 	"scripts": {
-		"build": "rm -rf ./public .wwebjs_auth .wwebjs_cache && npx tsc && webpack --config webpack.config.js",
+		"build": "rm -rf ./public .wwebjs_auth .wwebjs_cache && npx tsc",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node ./public/bundle.js",
+		"start": "node ./dist",
 		"dev": "rm -rf .wwebjs_auth .wwebjs_cache && nodemon --exec ts-node ./src/index.ts"
 	},
 	"author": "",
