--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
 	"compilerOptions": {
-		"target": "ES6", // Specify ECMAScript target version
+		"target": "ES2016", // Specify ECMAScript target version
 		"module": "commonjs", // Specify module code generation
 		"outDir": "./dist", // Output directory for compiled JS files
 		"rootDir": "./src", // Source directory for TS files
-		"strict": true, // Enable all strict type-checking options
+		"strict": false, // Enable all strict type-checking options
 		"esModuleInterop": true, // Enable compatibility with ES modules
 		"skipLibCheck": true // Skip type checking of declaration files
 	},
