--- a/package.json
+++ b/package.json
@@ -13,21 +13,22 @@
 	"license": "ISC",
 	"dependencies": {
 		"dotenv": "^16.4.7",
+		"express": "^4.18.2",
+		"mongodb": "^6.14.2",
+		"puppeteer": "^24.4.0",
+		"qrcode": "^1.5.3",
 		"qrcode-terminal": "^0.12.0",
 		"whatsapp-web.js": "^1.26.1-alpha.0",
-		"puppeteer": "^24.4.0",
-		"ws": "^8.18.1",
-		"express": "^4.18.2",
-		"qrcode": "^1.5.3"
+		"ws": "^8.18.1"
 	},
 	"devDependencies": {
 		"@types/node": "^22.13.10",
 		"nodemon": "^3.1.9",
+		"ts-loader": "^6.2.2",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.8.2",
-		"ts-loader": "^6.2.2",
 		"webpack": "^4.42.1",
-		"webpack-dev-server": "^3.10.3",
-		"webpack-cli": "^3.3.11"
+		"webpack-cli": "^3.3.11",
+		"webpack-dev-server": "^3.10.3"
 	}
 }
