--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
 	"compilerOptions": {
-		"target": "ES2016", // Specify ECMAScript target version
-		"module": "commonjs", // Specify module code generation
-		"outDir": "./dist", // Output directory for compiled JS files
-		"rootDir": "./src", // Source directory for TS files
-		"strict": false, // Enable all strict type-checking options
-		"esModuleInterop": true, // Enable compatibility with ES modules
-		"skipLibCheck": true // Skip type checking of declaration files
+		"module": "ESNext", // or "esnext" if you're using ES modules
+		"target": "es2017", // or higher
+		"moduleResolution": "node", // Ensure this is set to "node"
+		"esModuleInterop": true, // Enable ES module interop
+		"strict": false, // Enable strict type checking
+		"outDir": "./dist", // Output directory for compiled files
+		"rootDir": "./src" // Root directory for your source files
 	},
 	"include": ["src/**/*"], // Include all files in the src directory
 	"exclude": ["node_modules"] // Exclude node_modules
