--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
 	"dependencies": {
 		"dotenv": "^16.4.7",
 		"express": "^4.18.2",
-		"mongodb": "^6.14.2",
 		"puppeteer": "^24.4.0",
 		"qrcode": "^1.5.3",
 		"qrcode-terminal": "^0.12.0",
@@ -26,9 +25,6 @@
 		"nodemon": "^3.1.9",
 		"ts-loader": "^6.2.2",
 		"ts-node": "^10.9.2",
-		"typescript": "^5.8.2",
-		"webpack": "^4.42.1",
-		"webpack-cli": "^3.3.11",
-		"webpack-dev-server": "^3.10.3"
+		"typescript": "^5.8.2"
 	}
 }
