--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"dotenv": "^16.4.7",
 		"express": "^4.18.2",
+		"fs-extra": "^11.3.0",
 		"puppeteer": "^24.4.0",
 		"qrcode": "^1.5.3",
 		"qrcode-terminal": "^0.12.0",
